Test bugfix for modal functionality on iOS

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,7 @@ table {
   height: 130vh;
   background-color: rgba(255, 255, 255, .3);
   z-index: 99;
+  cursor: pointer;
 }
 
 #navClose:hover {
